Backend structure created

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-PORT = 3001
+PORT=3001
+MONGODB_CONNECTIONSTRING=mongodb+srv://nh2praja:Naitik1234@desikart.mtwxeyv.mongodb.net/?retryWrites=true&w=majority
+JWT_SECREAT_TOKEN=thismytoken
