--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "test-coverage": "jest --coverage",
     "build": "npm install && cd client && npm install && npm run build",
-    "start": "babel-node routes/index.js",
-    "start:dev": "nodemon --exec babel-node routes/index.js"
+    "start": "babel-node src/index.js",
+    "start:dev": "nodemon --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,9 @@
     "@babel/preset-react": "^7.18.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-preset-react-app": "^10.0.1",
+    "bcryptjs": "^2.4.3",
     "eslint": "^8.33.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20"
   }
 }
