--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel server.js -d build",
+    "full-build":"cd frontend && npm install && npm run build && npm run start",
     "start": "npm run build && nodemon build/server.js"
   },
   "repository": {
