--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel server.js -d build",
-    "full-build":"cd client && npm install && npm run build && npm run start",
+    "full-build": "cd client && npm install && npm run build && npm run start",
     "start": "npm run build && nodemon build/server.js"
   },
   "repository": {
@@ -16,10 +16,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
