--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel server.js -d build",
-    "full-build": "cd client && npm install && npm run build && npm run start",
-    "start": "npm run build && nodemon build/server.js"
+    "build": "npm install && cd client && npm install && npm run build && npm run start -d",
+    "start": "babel-node routes/index.js",
+    "start:dev": "nodemon --exec babel-node routes/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/node": "^7.20.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "eslint": "^8.33.0",
     "nodemon": "^2.0.20"
