--- a/.eslintrc
+++ b/.eslintrc
@@ -3,9 +3,10 @@
         "browser": true,
         "node": true,
         "es2021": true,
-        "commonjs": true
+        "commonjs": true,
+        "jest": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended", "airbnb", "prettier", "prettier/react"],
     "rules": {
         // "indent": [  // To be updated accoring to the rules want to set-up not necessary to have all
         //     "error",
