--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,9 @@ build:
   image: node:latest
   stage: build
   script:
+    - [ -s "$NVM_DIR/nvm.sh" ]
+    - \. "$NVM_DIR/nvm.sh"
+    - echo "Heelo  it worked"
     - npm run build 
     - npm run start
   cache:
