--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "E-commerce website for the Indian store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npm install && cd client && npm install && npm run build",
     "start": "babel-node routes/index.js",
     "start:dev": "nodemon --exec babel-node routes/index.js"
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.1",
     "path": "^0.12.7"
@@ -29,6 +30,9 @@
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.33.0",
     "nodemon": "^2.0.20"
   }
