updated the coverage files

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,3 +1,5 @@
 {
-    "testRegex": "((\\.|/*.)(test))\\.js?$"
-  }
+	"collectCoverageFrom": ["routes/*.js", "!**/node_modules/**"],
+	"coverageReporters": ["html", "text", "text-summary", "cobertura"],
+	"testMatch": ["**/*.test.js"]
+}
