--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,3 +29,16 @@ test:
     - npm run test
   artifacts:
     when: always 
+
+coverage:
+  stage: test
+  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
+  # dependencies:
+  #   - build
+  script:
+    - npm install
+    - npm run test-coverage
+  artifacts:
+    when: always 
+    paths:
+      - coverage/
