--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,47 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+image: node:alpine
+
 stages:
-- test
-sast:
+  # - build
+  - test
+
+# build:
+#   stage: build
+#   script:
+#     - echo "Hello  it worked!!"
+#     - npm run build 
+#     - npm run start
+#   cache:
+#     paths:
+#       - node_modules/
+#   artifacts:
+#     expire_in: 1 days
+#     when: on_success
+#     paths:
+#       - node_modules/
+
+test:
   stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
+  # dependencies:
+  #   - build
+  cache:
+    paths:
+      - node_modules/
+  script:
+    - npm install
+    - npm run test
+  artifacts:
+    when: always 
+
+coverage:
+  stage: test
+  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
+  dependencies:
+    - test
+  script:
+    - npm install
+    - npm run test-coverage
+  artifacts:
+    when: always 
+    paths:
+      - coverage/
