email functionalityy added

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3001
+SENDGRID_API_KEY=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
 MONGODB_CONNECTIONSTRING=mongodb+srv://nh2praja:Naitik1234@desikart.mtwxeyv.mongodb.net/?retryWrites=true&w=majority
 JWT_SECREAT_TOKEN=thismytoken
