--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test1": "env-cmd -f ./.env jest --runInBand",
-    "test-coverage": "jest --coverage",
+    "test1": "env-cmd -f ./.env jest --watchAll --runInBand",
+    "test-coverage": "jest --coverage ",
     "build": "npm install && cd client && npm install && npm run build",
     "start": "babel-node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js"
@@ -33,6 +33,7 @@
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@sendgrid/mail": "^7.7.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-preset-react-app": "^10.0.1",
     "bcryptjs": "^2.4.3",
