add user test cases

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "E-commerce website for the Indian store",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test1": "env-cmd -f ./.env jest --watchAll --runInBand",
-    "test-coverage": "jest --coverage ",
+    "test": "env-cmd -f ./.env jest --runInBand",
+    "test-coverage": "env-cmd -f ./.env jest --coverage --runInBand",
     "build": "npm install && cd client && npm install && npm run build",
     "start": "babel-node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js"
