--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,5 @@
 {
-	"collectCoverageFrom": ["routes/*.js", "!**/node_modules/**"],
+	"collectCoverageFrom": ["src/routes/*.js", "!**/node_modules/**"],
 	"coverageReporters": ["html", "text", "text-summary", "cobertura"],
 	"testMatch": ["**/*.test.js"]
 }
