--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"jest": "^29.5.0",
 		"mongodb": "^5.0.1",
 		"mongoose": "^6.9.1",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"stripe": "^11.16.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.20.7",
