--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"jest": "^29.5.0",
+		"mocha": "^10.2.0",
 		"mongodb": "^5.0.1",
 		"mongoose": "^6.9.1",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"selenium-webdriver": "^4.8.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.20.7",
